Scene statistics overlay column spacing weirdness #88799

Closed
opened 2021-06-03 16:00:16 +02:00 by Mikhail Rachinskiy · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-04 22:35, hash: d08cc63e2f

Short description of error
I discovered two bugs regarding statistics overlay, I put both of them them in this report because they might be connected.

First bug:
Scene statistics overlay column spacing is affected by Widget font preferences when View Name and Object Info disabled in preferences.
Widget font size.mp4

Second bug:
Statistics overlay column spacing is jittering on viewport update when View Name and Object Info disabled and (this is interesting) timeline area is removed.
Jitter.mp4

Exact steps for others to reproduce the error

First bug:

  • Enable statistics overlay.
  • Disable View Name and Object Info preferences.
  • Change the size of Widget font in preferences, you should see that it changes empty space between columns.
  • Enabling back View Name and Object Info preferences will fix the issue, where Widget font is no longer affects the overlay.

Second bug:

  • Load factory settings.
  • Disable View Name and Object Info preferences.
  • Remove timeline area at the bottom.
  • Trigger viewport update (for example selecting and deselecting an object), you should see column spacing jitter.
    • What is interesting if you add any new area in the place of removed timeline area, the bug will not disappear, unless it's the timeline area.
    • It also can be fixed by disabling Navigation gizmo.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 860M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-04 22:35, hash: `d08cc63e2f` **Short description of error** I discovered two bugs regarding statistics overlay, I put both of them them in this report because they might be connected. First bug: Scene statistics overlay column spacing is affected by `Widget` font preferences when `View Name` and `Object Info` disabled in preferences. [Widget font size.mp4](https://archive.blender.org/developer/F10155976/Widget_font_size.mp4) Second bug: Statistics overlay column spacing is jittering on viewport update when `View Name` and `Object Info` disabled and (this is interesting) timeline area is removed. [Jitter.mp4](https://archive.blender.org/developer/F10155977/Jitter.mp4) **Exact steps for others to reproduce the error** First bug: - Enable statistics overlay. - Disable `View Name` and `Object Info` preferences. - Change the size of `Widget` font in preferences, you should see that it changes empty space between columns. - Enabling back `View Name` and `Object Info` preferences will fix the issue, where `Widget` font is no longer affects the overlay. Second bug: - Load factory settings. - Disable `View Name` and `Object Info` preferences. - Remove timeline area at the bottom. - Trigger viewport update (for example selecting and deselecting an object), you should see column spacing jitter. * What is interesting if you add any new area in the place of removed timeline area, the bug will not disappear, **unless** it's the timeline area. * It also can be fixed by disabling Navigation gizmo.
Author
Member

Added subscriber: @MikhailRachinskiy

Added subscriber: @MikhailRachinskiy
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Harley Acheson self-assigned this 2021-06-04 00:14:29 +02:00

This issue was referenced by 5f19646d7e

This issue was referenced by 5f19646d7edef02479bccd7e898f072c9e54ac6e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88799
No description provided.